kubernetes/apps/default/gitea/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: gitea
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: gitea
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: codeberg.org
          - matchName: git.sr.ht
          - matchName: github.com
          - matchName: gitlab.com
          - matchPattern: "*.github.com"
          - matchPattern: "*.gitlab.com"
